--- a/requirements.txt
+++ b/requirements.txt
@@ -1,132 +1,104 @@
+altair==5.5.0
 annotated-types==0.7.0
-argon2-cffi==21.3.0
-argon2-cffi-bindings==21.2.0
-asttokens==2.0.5
-async-generator==1.10
-attrs==21.4.0
-backcall==0.2.0
-beautifulsoup4==4.11.1
-bing-image-downloader==1.1.2
-bleach==5.0.1
+attrs==25.3.0
+blinker==1.9.0
 blis==1.3.0
+cachetools==5.5.2
 catalogue==2.0.10
-certifi==2023.5.7
-cffi==1.15.1
+certifi==2025.1.31
+cffi==1.17.1
 charset-normalizer==3.4.1
 click==8.1.8
 cloudpathlib==0.21.0
 colorama==0.4.6
 confection==0.1.5
 cymem==2.0.11
-debugpy==1.6.2
-decorator==5.1.1
-defusedxml==0.7.1
+docx2txt==0.9
 en_core_web_sm @ https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.8.0/en_core_web_sm-3.8.0-py3-none-any.whl
-entrypoints==0.4
-et-xmlfile==1.1.0
-exceptiongroup==1.1.1
-executing==0.8.3
-fastjsonschema==2.16.1
+exceptiongroup==1.2.2
 filelock==3.18.0
 fsspec==2025.3.2
-google-images-download==2.8.0
+gitdb==4.0.12
+GitPython==3.1.44
 h11==0.14.0
 huggingface-hub==0.30.2
-idna==3.4
-ipykernel==6.15.1
-ipython==8.4.0
-ipython-genutils==0.2.0
-jedi==0.18.1
-Jinja2==3.1.2
+idna==3.10
+Jinja2==3.1.6
 joblib==1.4.2
-jsonschema==4.7.2
-jupyter-client==7.3.4
-jupyter-core==4.11.1
-jupyterlab-pygments==0.2.2
+jsonschema==4.23.0
+jsonschema-specifications==2024.10.1
+keybert==0.9.0
 langcodes==3.5.0
 language_data==1.3.0
 lxml==5.3.2
 marisa-trie==1.2.1
 markdown-it-py==3.0.0
-MarkupSafe==2.1.1
-matplotlib-inline==0.1.3
+MarkupSafe==3.0.2
 mdurl==0.1.2
-mistune==0.8.4
 mpmath==1.3.0
 murmurhash==1.0.12
-nbclient==0.6.6
-nbconvert==6.5.0
-nbformat==5.4.0
-nest-asyncio==1.5.5
+narwhals==1.35.0
 networkx==3.4.2
 nltk==3.9.1
-notebook==6.4.12
 numpy==2.2.4
-openpyxl==3.1.2
-outcome==1.2.0
-packaging==21.3
-pandocfilters==1.5.0
-parso==0.8.3
-pickleshare==0.7.5
-pillow==10.3.0
+outcome==1.3.0.post0
+packaging==24.2
+pandas==2.2.3
+pillow==11.2.1
 preshed==3.0.9
-prometheus-client==0.14.1
-prompt-toolkit==3.0.30
-psutil==5.9.1
-pure-eval==0.2.2
-pycparser==2.21
+protobuf==5.29.4
+pyarrow==19.0.1
+pycparser==2.22
 pydantic==2.11.3
 pydantic_core==2.33.1
+pydeck==0.9.1
 Pygments==2.19.1
-pyparsing==3.0.9
-pyrsistent==0.18.1
 PySocks==1.7.1
-python-dateutil==2.8.2
+python-dateutil==2.9.0.post0
 python-docx==1.1.2
-pywin32==304
-pywinpty==2.0.6
+pytz==2025.2
 PyYAML==6.0.2
-pyzmq==23.2.0
+referencing==0.36.2
 regex==2024.11.6
 requests==2.32.3
 rich==14.0.0
+rpds-py==0.24.0
 safetensors==0.5.3
 scikit-learn==1.6.1
 scipy==1.15.2
-selenium==4.9.1
-Send2Trash==1.8.0
+selenium==4.31.0
 sentence-transformers==4.1.0
 shellingham==1.5.4
-six==1.16.0
+six==1.17.0
 smart-open==7.1.0
-sniffio==1.3.0
+smmap==5.0.2
+sniffio==1.3.1
 sortedcontainers==2.4.0
-soupsieve==2.3.2.post1
 spacy==3.8.5
 spacy-legacy==3.0.12
 spacy-loggers==1.0.5
 srsly==2.5.1
-stack-data==0.3.0
+streamlit==1.44.1
 sympy==1.13.1
-terminado==0.15.0
+tenacity==9.1.2
 thinc==8.3.6
 threadpoolctl==3.6.0
-tinycss2==1.1.1
 tokenizers==0.21.1
+toml==0.10.2
 torch==2.6.0
-tornado==6.2
+tornado==6.4.2
 tqdm==4.67.1
-traitlets==5.3.0
 transformers==4.51.3
-trio==0.22.0
-trio-websocket==0.10.2
+trio==0.29.0
+trio-websocket==0.12.2
 typer==0.15.2
 typing-inspection==0.4.0
 typing_extensions==4.13.2
-urllib3==2.0.2
+tzdata==2025.2
+urllib3==2.4.0
 wasabi==1.1.3
-wcwidth==0.2.5
+watchdog==6.0.0
 weasel==0.4.1
-webencodings==0.5.1
+websocket-client==1.8.0
 wrapt==1.17.2
 wsproto==1.2.0
